--- a/example.cabal
+++ b/example.cabal
@@ -15,3 +15,4 @@ executable example
     build-depends:    base
     hs-source-dirs:   src
     default-language: Haskell2010
+    extra-libraries:  gvc
