--- a/example.cabal
+++ b/example.cabal
@@ -13,6 +13,6 @@ executable example
     import:           warnings
     main-is:          Main.hs
     build-depends:    base
-    hs-source-dirs:   src
+    hs-source-dirs:   .
     default-language: Haskell2010
     extra-libraries:  gvc
